prevent horizontal scroll

--- a/styles/competition.css
+++ b/styles/competition.css
@@ -1,3 +1,7 @@
+html, body {
+    overflow-x: hidden;
+}
+
 .content-top {
     margin-top: 10vh;
     width: 100vw;
